kubernetes-networks/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: ingress.local
      http:
        paths:
           - path: /web(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: web-svc
                 port:
                   number: 8000
